chore: general cleanup of dead or deprecate code